--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["dunossauro <mendesxeduardo@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "3.8.1"
 gunicorn = "^20.0.4"
 Flask = "^1.1.2"
 validate-docbr = "^1.8.2"
