--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ gunicorn = "^20.0.4"
 Flask = "^1.1.2"
 validate-docbr = "^1.8.2"
 flasgger = "^0.9.5"
+Pillow = "^8.1.2"
+pytesseract = "^0.3.7"
 
 [tool.poetry.dev-dependencies]
 
