--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ Pillow = "^8.1.2"
 pytesseract = "^0.3.7"
 
 [tool.poetry.dev-dependencies]
+black = "^20.8b1"
+isort = "^5.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
